# blob-detection-and-tracking

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
blob/: __init__.py  blob.hpp
blob/core/: CMakeLists.txt
blob/core/src/: CMakeLists.txt  config.h.cmake
blob/core/src/blob/: blob.hpp
blob/core/src/blob_detector/: CMakeLists.txt  blob_detector.hpp
blob/core/src/blob_detector/fft/: fft_fast.hpp  fft_slow.hpp
blob/core/src/blob_detector/kdtree/: kdtree.hpp
blob/core/src/blob_tracker/: CMakeLists.txt  blob_tracker.cpp  blob_tracker.hpp
blob/core/src/blob_tracker/hungarian/: hungarian.cpp  hungarian.hpp
blob/core/src/blob_tracker/kalman_filter/: kalman_filter.cpp
blob/core/test/: CMakeLists.txt  test.cpp
blob/python/: CMakeLists.txt  wrapper.cpp
blob_detector/: CMakeLists.txt  blob_detector.hpp
blob_detector/fft/: fft_fast.hpp  fft_slow.hpp
blob_detector/kdtree/: kdtree.hpp
blob_tracker/: CMakeLists.txt  blob_tracker.hpp
blob_tracker/hungarian/: hungarian.cpp  hungarian.hpp
blob_tracker/kalman_filter/: kalman_filter.hpp
cmake/: compiler.cmake
docs/: CMakeLists.txt  Doxyfile
example/: detector.py  tracker.py
test/: CMakeLists.txt  test.cpp
